website/src/pages/product-ecosystem.module.css
/* ROADMAP CSS */

.roadmapSection {
  flex-direction: column;
  gap: 50px !important;
}

.roadmapContainer {
  width: 90%;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  gap: 16px;
}

.roadmapColumn {
}

.roadmapColumnTitle {
  display: flex;
  justify-content: center;
  align-items: center;

  font-size: 1.2em;
  font-weight: 700;
  color: #555555;
  text-align: center;
  margin-bottom: 10px;
}

.titleIcon {
  width: 16px;
  vertical-align: sub;
  margin-right: 5px;
  color: grey;
}

.offCenterBalance {
  width: 16px;
}

.roadmapItemContainer {
  display: flex;
  flex-direction: column;
}

.roadmapItemContainer .itemBtn {
  width: 100%;
  font-size: 0.85em;
  font-weight: 500;
  font-family: var(--aa-font-family);
  text-align: left;
  border: 1px solid rgb(205, 205, 205);
  border-radius: 4px;
  background-color: white;
  padding: 10px 15px;
  margin: 3px 0px;
  border-left: 5px solid rgb(202, 202, 202);
  box-shadow: 0px 2px 3px #c7c7c740;
  cursor: pointer;
  transition: background-color 150ms ease, border-color 150ms ease;
}
.roadmapItemContainer .itemBtn:hover {
  background-color: rgb(240, 240, 240);
  border-top-color: rgb(180, 180, 180);
  border-bottom-color: rgb(180, 180, 180);
  border-right-color: rgb(180, 180, 180);
}

.live .itemBtn {
  border-left-color: rgb(84, 207, 92);
}
.comingSoon .itemBtn {
  border-left-color: #4cabe7;
}
.backlog .itemBtn {
  border-left-color: rgb(205, 183, 233); /* #92d8c3; */
}
.productsOnRadar .itemBtn {
  border-left-color: rgb(240, 193, 127);
}

.tooltipContent {
  max-width: 300px;
}

.tooltipStyling {
  transition: opacity 150ms ease-out !important;
  background: #263238 !important;
  color: white !important;
  box-shadow: 0px 3px 10px rgba(138, 138, 138, 0.602);
}
.tooltipStyling::after {
  background-color: #263238 !important;
}

/* fix margin between list items */
.scrollbar > div {
  display: flex;
  flex-direction: column;
  padding-bottom: 6px;
}

.scrollbar {
  border-bottom: 2px solid #cfcfcf95;
  padding-bottom: 1px;
}

.roadmapCTAGrid {
  display: grid;
  width: 70%;
  grid-template-columns: 1fr 1fr;

  border: 1px solid #d1dde3;
  border-radius: 7px;
  padding: 30px;

  box-shadow: 0px 5px 20px #63727921;
  background: #f8f8f8;
}

.roadmapCTAColumn {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.roadmapCTAColumn:nth-child(odd) {
  border-right: 4px dotted #d1dde3;
  padding-right: 24px;
}
.roadmapCTAColumn:nth-child(even) {
  padding-left: 24px;
}

.roadmapCTATitle {
  font-size: 1.5em;
  font-weight: 700;
  text-align: center;
  margin-bottom: 5px;
}

.roadmapCTAText {
  text-align: center;
  font-weight: 500;
  font-size: 1.1em;
  line-height: 1.3em;
  margin-bottom: 20px;
  flex-grow: 1;
}

.roadmapCTABtn {
  flex-grow: 0 !important;
}

/*****/

.priceTiers {
  display: grid;
  margin: 0 auto;
  gap: 24px;
  grid-template-columns: 1fr 1fr 1fr;
  padding-bottom: 96px;
}

.priceTier {
  border-radius: 8px;
  padding: 48px;
  box-shadow: 0 8px 30px rgba(0, 0, 0, 0.12);
}

.priceTierTitle {
  font-size: 2em;
  font-weight: 700;
}

.priceTierDescription {
  margin-bottom: 16px;
}

.priceTierFeatures {
  margin-top: 32px;
}

.price {
  font-weight: 700;
  margin-bottom: 16px;
}

.priceTierFeatures svg {
  margin-right: 8px;
  flex-shrink: 0;
}
.priceTierFeatures li {
  padding: 0;
  margin: 0;
  list-style: none;
  display: flex;
  align-items: center;
  margin-bottom: 16px;
}

.altButton {
  background-color: #607d8b !important;
  border: 0 !important;
  color: #fff;
}
.altButton:hover {
  background-color: #7d96a3 !important;
  color: #fff;
}

.featureGrid {
  margin-top: 32px;
  margin-bottom: 96px;
  width: 100%;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
}

.featureGrid div {
  border-bottom: 1px solid #eee;
  padding: 8px;
}

.featureGridHeader {
  font-weight: 700;
  margin-top: 32px;
}

div.featureGridHeader {
  border-bottom: 0;
}

.questions {
  margin-top: 64px;
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 24px;
}

.question {
  margin-bottom: 32px;
}

.questionQuestion {
  font-weight: 700;
  margin-bottom: 16px;
}

.questions a {
  font-weight: 700;
}

/** Disable self service Tier for now */

.priceTiers {
  grid-template-columns: 1fr 1fr;
}
.priceTier:nth-of-type(2) {
  display: none;
}
.featureGrid div:nth-of-type(4n + 3) {
  display: none;
}
.featureGrid {
  grid-template-columns: 1fr 1fr 1fr;
}

/* Responsiveness */

@media (max-width: 900px) {
  .roadmapContainer {
    grid-template-columns: 1fr 1fr;
  }
  .roadmapColumnTitle {
    margin-top: 10px;
  }

  .priceTiers {
    grid-template-columns: 1fr;
  }
  .questions {
    grid-template-columns: 1fr;
  }
}

@media (max-width: 700px) {
  .roadmapCTAGrid {
    grid-template-columns: 1fr;
    width: 90%;
  }

  .roadmapCTAColumn:nth-child(odd) {
    border-right: none;
    padding-right: 0;

    border-bottom: 4px dotted #d1dde3;
    padding-bottom: 36px;
  }
  .roadmapCTAColumn:nth-child(even) {
    padding-left: 0;
    padding-top: 24px;
  }
}

@media (max-width: 512px) {
  .roadmapContainer {
    grid-template-columns: 1fr;
  }
  .roadmapColumnTitle {
    font-size: 1.5em;
  }

  .modalDialog {
    max-width: 90% !important;
  }
}

/* MODAL CSS */
.modalDialog {
  min-width: 400px;
  max-width: 600px !important;
  border-radius: 6px;
  padding: 25px !important;
}

.modalOverlay {
  background: rgba(0, 0, 0, 0.4) !important;
}

.modalCloseBtn {
  margin-left: auto;
  padding: 10px 15px !important;
  color: rgb(65, 65, 65);
  background-color: #e8e8e8 !important;
}
.modalCloseBtn:hover {
  color: black;
  background-color: #c8c8c8 !important;
}

.modalRoot[aria-hidden="false"] .modalAnimation > .modalDialog {
  animation: modalSlideIn 100ms cubic-bezier(0, 0, 0.5, 1) !important;
}

@keyframes modalSlideIn {
  from {
    transform: translateY(15%);
  }
  to {
    transform: translateY(0);
  }
}

